[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/Xenosphere-RM66.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Paused.gd" type="Script" id=2]
[ext_resource path="res://GUI/Font.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 1 )

[node name="Level Complete UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.678431, 0.670588, 0.670588, 0.780392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 678.0
margin_top = 207.985
margin_right = 1218.0
margin_bottom = 328.985
custom_colors/font_color = Color( 0.376471, 0.564706, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -548.015
margin_right = 140.0
margin_bottom = -312.015
grow_horizontal = 0
custom_constants/separation = 70
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="HBoxContainer"]
margin_right = 288.0
margin_bottom = 32.0
theme = ExtResource( 3 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Try Again" type="Button" parent="HBoxContainer"]
margin_top = 102.0
margin_right = 288.0
margin_bottom = 134.0
theme = ExtResource( 3 )
text = "  Retry Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Select" type="Button" parent="HBoxContainer"]
margin_top = 204.0
margin_right = 288.0
margin_bottom = 236.0
theme = ExtResource( 3 )
text = "Level Select"

[connection signal="pressed" from="HBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="HBoxContainer/Try Again" to="." method="_on_Try_Again_pressed"]
[connection signal="pressed" from="HBoxContainer/Level Select" to="." method="_on_Level_Select_pressed"]
